--- a/app/src/main/res/layout/item_guril.xml
+++ b/app/src/main/res/layout/item_guril.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="400dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.administrator.myapplication.MainActivity">
 
     <TextView
-        android:id="@+id/tv"
+        android:id="@+id/tv_item"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@android:color/holo_red_light"
-        android:gravity="center"
-        android:textSize="30sp"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:textSize="16sp"
         android:text="妹子查看"/>
 
-    <ListView
-        android:layout_below="@id/tv"
-        android:id="@+id/lv"
+    <ImageView
+        android:id="@+id/iv_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </ListView>
-</RelativeLayout>
+    </ImageView>
+</LinearLayout>
